--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.2"
+    "react-scripts": "^4.0.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
