--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "site": "firedrive",
     "public": "build",
     "ignore": [
       "firebase.json",
